@@ -12,6 +12,8 @@ Changes to version 2.4-0
   
   o Introduced Rcmdr scientific.notation option to suppress scientific notation; corresponds to R scipen option, and default is 5 (as opposed to 0 in R).
   
+  o Improved labeling of two-variances test dialog (suggestion of Beatriz Lacruz).
+  
 Changes to Version 2.3-2
 
   o Fixes to Spanish translation (from Manual Munoz Marquez).
